--- a/Your Vocabulary/Views/Statistic.storyboard
+++ b/Your Vocabulary/Views/Statistic.storyboard
@@ -145,7 +145,9 @@
         <scene sceneID="OEJ-DS-Dhb">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hv6-fe-Imj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Statistic" image="statistics_tb" selectedImage="selected_statistics_tb" id="WhO-Jv-PuN"/>
+                    <tabBarItem key="tabBarItem" title="Statistic" image="statistics_tb" selectedImage="statistics_tb_selected" id="WhO-Jv-PuN">
+                        <color key="badgeColor" red="1" green="0.83137254900000002" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="faT-DK-xU8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -170,7 +172,7 @@
     </scenes>
     <resources>
         <image name="bg" width="1243" height="2209"/>
-        <image name="selected_statistics_tb" width="26" height="26"/>
         <image name="statistics_tb" width="26" height="26"/>
+        <image name="statistics_tb_selected" width="26" height="26"/>
     </resources>
 </document>
